# velmora-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/game/: index.html
src/launcher/: index.html  launcher.js  preview-home.html  preview-login.html  styles.css
