[package]
name = "velmora-desktop"
version = "0.2.4"
description = "Velmora — launcher de bureau"
authors = ["Velmora"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "velmora_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros", "fs"] }
thiserror = "1"
url = "2"
futures = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
